# job_time_stock_watcher

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  README_CN.md  config.yaml.example  positions.yaml.example  pyproject.toml  run.sh
.claude/tdd/: stock-watcher-core.tdd.md
.scratch/tui-v2/: PRD.md
.scratch/tui-v2/issues/: 01-fix-broken-search.md  02-ctrl-n-hot-reload.md  03-extend-stockquote-model.md  04-click-to-sort-columns.md  05-alert-indicator-list.md  06-alert-history-log.md  07-position-tracking.md  08-extended-columns.md  09-detail-panel.md  10-settings-panel.md  11-export-polish.md
docs/adr/: 0001-raw-value-store-for-sort.md
docs/agents/: domain.md
docs/superpowers/specs/: 2025-06-30-feishu-webhook-design.md
docs/testing/: stock-watcher.journeys.md
src/stock_watcher/: app.py  bot_server.py  chat_sender.py  config.py  deepseek_chat.py  email_sender.py  fetcher.py  models.py  scheduler.py
tests/: test_app.py  test_config.py  test_fetcher.py  test_models.py  test_scheduler.py
